# lab

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  REPO.bazel  REQ.txt  algo  args  compose.yml  conftest.py  docker-compose.yml  plan.md  pyproject.toml  pytest.ini  requirements.txt  research.md  run.sh
check/: BUILD.bazel  README.md  def.bzl
check/src/: main.py
check/src/rule/: fmt_bzl.py  fmt_json.py  fmt_md.py  fmt_py.py
check/test/: test_coverage.py  test_fmt_bzl.py  test_fmt_json.py  test_fmt_md.py  test_fmt_py.py
core/: README.md
core/code/: BUILD.bazel
core/code/src/: code.py
core/code/test/: test_code.py
core/date/: BUILD.bazel  README.md
core/date/src/: birthday.py  cli.py  cn_md.py  cn_resolve.py  cn_str.py  cn_zodiac.py  gr_md.py  lunar_year.py  parse.py  zodiac.py
core/date/test/: test_birthday.py  test_cn_md.py  test_cn_resolve.py  test_cn_str.py  test_cn_zodiac.py  test_gr_md.py  test_lunar_year.py  test_parse.py  test_zodiac.py
core/demo/: BUILD.bazel  README.md
core/demo/src/: main.py
core/demo/test/: test_main.py
core/md/: BUILD.bazel
core/md/src/: md.py
core/md/test/: test_md.py
core/script/: BUILD.bazel
core/script/src/: script.py
core/script/test/: test_script.py
core/zh/: BUILD.bazel
core/zh/src/: zh.py
core/zh/test/: test_zh.py
docs/: celery-rabbitmq.md
src/: README.md  __init__.py  __main__.py
src/config/: scaffold.py
src/config/groups/wandb/: lab_config_wandb.py
src/core/: __init__.py  arguments.py  config.py  constants.py  context.py  data_core.py  dataclass.py  dutil.py  environment.py  fsm.py  func_result.py  group.py  log_level.py  logger.py  run_config.py  run_context.py  strict_data.py  util.py
src/core/config/: __init__.py  config.py
src/core/context/: __init__.py  context.py
src/core/ctx/: __init__.py  context.py
src/core/log/: __init__.py  logger.py
src/core/model/llm/: llm.py  llm_base.py
src/core/model/llm/providers/: deepseek_llm.py  openai_llm.py
src/core/util/: constants.py  data.py  general.py
src/lib/algo/: README.md  __init__.py  algo.py
src/lib/algo/aswan/: README.md  __init__.py  aswan.py  aswan_normal.py  aswan_sim.py
src/lib/data/: __init__.py  data.py  data_basis.py  group.py  pq.py  serial.py  word_bank.py
src/lib/fsm/: fsm.py
src/lib/game/: README.md  __init__.py  game.py  game_basis.py  game_config.py  game_init_params.py  game_state.py  player.py  round_based_game.py  round_robin_game.py
src/lib/game/action/: speech.py
src/lib/game/event/: __init__.py  event.py  game_event.py  misc.py  speech.py
src/lib/game/round_robin/: round_robin_game.py
src/lib/graph/: README.md  __init__.py  graph.py  graph_init_params.py
src/lib/model/: __init__.py  get_model.py  model.py  model_base.py  model_basis.py
src/lib/model/txt/: __init__.py  environment.py  gentxt_params.py  gentxt_result.py  get_lm.py  lm.py  lm_base.py  lm_basis.py  lm_coke.py  lm_gen_params.py  lm_gen_result.py  lm_gentxt_params.py  lm_gentxt_result.py
src/lib/model/txt/api/: deepseek.py  openai.py
src/lib/model/txt/api/deepseek/: deepseek_lm.py
src/lib/model/txt/api/openai/: __init__.py  openai_lm.py  openai_lm_gentxt_params.py  openai_lm_gentxt_result.py  openai_lm_init_params.py
src/lib/rng/: README.md  __init__.py  card.py  coin.py  coin_rng.py  deck.py  dice.py  dice_rng.py  poker_deck.py  rng.py  rng_init_params.py
src/log/: __init__.py  lab_logger.py  logger.py  to_wandb_table.py  update_logger.py
src/model/llm/: __init__.py  llm_base.py
src/task/algo/: README.md  __init__.py  main.py
src/task/content_generation/: README.md  background_discovery.py  draft_generation.py  interest_discovery.py  launch_ui.py  main.py  pipeline.py  prompts.py  structural_planning.py  test_pipeline.py
src/task/content_generation/prompts/: __init__.py  background_discovery_prompts.py  draft_generation_prompts.py  interest_discovery_prompts.py  structural_planning_prompts.py
src/task/content_generation/ui/: README.md  __init__.py  content_generation_ui.py  requirements-ui.txt  run_ui.py
src/task/demo/: README.md  main.py
src/task/dry_run/: README.md  main.py
src/task/validate_all_yaml/: README.md  main.py
src/util/: constants.py  general.py  setting_up.py
test/: conftest.py  util.py
test/core/: test_async_counter.py  test_concur.py  test_counter.py  test_dataclass.py  test_dup_logger.py  test_group.py  test_logger.py  test_logger_lifecycle.py  test_merged_enum.py  test_pk.py  test_sid.py  test_util.py
test/data/: test_pq.py
test/lib/algo/: test_algo.py  test_aswan.py
test/lib/game/: test_game_features.py
test/lib/graph/: test_graph.py  test_graph_init_params.py
test/lib/rng/: test_card.py  test_coin.py  test_coin_rng.py  test_deck.py  test_dice.py  test_dice_rng.py  test_poker_deck.py  test_presets.py  test_rng.py  test_rng_init_params.py
test/style/: test_black.py  test_isort.py
test/task/: test_validate.py
tools/: BUILD.bazel  README.md  ws
