module(
    name = "lab",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "labpip",
    python_version = "3.12",
    requirements_lock = "//:REQ.txt.lock",
)
use_repo(pip, "labpip")
