load("@lab_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load(":def.bzl", "fmt")

fmt()

# The per-file check driver (used as the main script of every generated test).
# The check/rule/fmt macros live in def.bzl.
exports_files(["src/main.py"])

# Formatting rules, split by language so each pulls only its own deps.
py_library(
    name = "fmt_py",
    srcs = ["src/rule/fmt_py.py"],
    deps = [
        requirement("black"),
        requirement("isort"),
    ],
)

py_library(
    name = "fmt_md",
    srcs = ["src/rule/fmt_md.py"],
    deps = [
        requirement("mdformat"),
        requirement("mdformat-frontmatter"),
        requirement("mdformat-gfm"),
    ],
)

py_library(
    name = "fmt_json",
    srcs = ["src/rule/fmt_json.py"],
)

py_library(
    name = "fmt_bzl",
    srcs = ["src/rule/fmt_bzl.py"],
)

[
    py_test(
        name = "test_" + n,
        size = "small",
        srcs = ["test/test_" + n + ".py"],
        deps = [":" + n],
    )
    for n in [
        "fmt_py",
        "fmt_md",
        "fmt_json",
    ]
]

py_test(
    name = "test_fmt_bzl",
    size = "small",
    srcs = ["test/test_fmt_bzl.py"],
    data = ["@buildifier_prebuilt//:buildifier"],
    deps = [":fmt_bzl"],
)

# Repo-wide structural coverage: every logic module has a test file.
py_test(
    name = "test_coverage",
    size = "small",
    srcs = ["test/test_coverage.py"],
    data = [
        ":py",
        "//core/code:py",
        "//core/date:py",
        "//core/demo:py",
        "//core/md:py",
        "//core/script:py",
        "//core/zh:py",
    ],
)

# All python files, for the repo-wide structural coverage test.
filegroup(
    name = "py",
    srcs = glob(["**/*.py"]),
)
