load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//check:def.bzl", "fmt")

fmt()

py_library(
    name = "demo",
    srcs = ["src/main.py"],
)

py_test(
    name = "test_main",
    size = "small",
    srcs = ["test/test_main.py"],
    deps = [":demo"],
)

# All python files, for the repo-wide structural coverage test.
filegroup(
    name = "py",
    srcs = glob(["**/*.py"]),
    visibility = ["//check:__pkg__"],
)
