load("@lab_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//check:def.bzl", "fmt")

fmt()

# Markdown frontmatter/body parsing.
py_library(
    name = "md",
    srcs = ["src/md.py"],
    imports = ["../.."],
    deps = [requirement("pyyaml")],
)

py_test(
    name = "test_md",
    size = "small",
    srcs = ["test/test_md.py"],
    deps = [":md"],
)

# All python files, for the repo-wide structural coverage test.
filegroup(
    name = "py",
    srcs = glob(["**/*.py"]),
    visibility = ["//check:__pkg__"],
)
