load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//check:def.bzl", "fmt")

fmt()

# Writing-system predicates (Latin / CJK / Cyrillic) and text majority.
py_library(
    name = "script",
    srcs = ["src/script.py"],
    imports = ["../.."],
)

py_test(
    name = "test_script",
    size = "small",
    srcs = ["test/test_script.py"],
    deps = [":script"],
)

# All python files, for the repo-wide structural coverage test.
filegroup(
    name = "py",
    srcs = glob(["**/*.py"]),
    visibility = ["//check:__pkg__"],
)
